# sema

./: .gitignore  README.md  SEMA_plan.md  pyproject.toml
examples/: hotpotqa_evolving.py
src/: __init__.py
src/agents/: __init__.py  agent.py
src/benchmarks/: __init__.py  benchmark.py  benchmarks.json  hotpotqa.py  measures.py  tools.py
src/config/: models.json  paths.json  paths.py
src/feedback/: __init__.py  base.py  meta_reward.py  reward_shaping.py
src/memory/: __init__.py  base.py  long_term.py  memory_system.py  short_term.py
src/models/: base.py  base_model.py  claude_model.py  gemini_model.py  mlx_model.py  model_usage.py  models.json  models.py  ollama_model.py  openai_model.py  zhipu_model.py
src/optimizer/: __init__.py  base.py  cmaes.py  evolutionary.py  hierarchical.py  llm_optimizer.py  mcts.py  population.py  prompt_breeding.py  registry.py  rl_optimizer.py  self_refinement.py  text_grad.py
src/orchestrator/: __init__.py  config.py  experiment.py  orchestrator.py
src/tools/: __init__.py  base.py  registry.py
src/tools/builtin/: __init__.py  calculator.py  lookup.py  search.py
src/utils/: __init__.py  file_utils.py  logger.py
src/workflow/: __init__.py  environment.py  executor.py  schema.py  templates.py
tests/: test_llm_usage_integration.py  test_model_usage.py
